# DAILI

./: Cargo.toml  README.md
src/: action.rs  args.rs  base.rs  container.rs  daili_path.rs  extracting.rs  file_container.rs  files.rs  main.rs  paths.rs  task.rs  today.rs  warning.rs
