[package]
name = "daili"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
home = "0.5.9"
colored = "2.1"
chrono = "0.4.35"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
